<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#DADCCB">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="110dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#F8F6FB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <EditText
        android:id="@+id/un"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/email"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#7E7070"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <EditText
        android:id="@+id/ed2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/sec"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#7E7575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="151dp"
        android:layout_height="26dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="15dp"
        android:textSize="17sp"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:text="@string/log"
        app:iconTint="#B17575" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/create_new_account"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="visible" />


</LinearLayout>