<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".SignUp"
    android:background="#DADCCB"
android:padding="30dp"
android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/reg"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#4A1D9A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />


    <EditText
        android:id="@+id/un"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/un"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#7E7070"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edp"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/p"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#7E7070"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <EditText
        android:id="@+id/ed_cp"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/cp"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#7E7070"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <EditText
        android:id="@+id/em"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/gmail"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#7E7070"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377"
        tools:ignore="DuplicateIds" />


    <EditText
        android:id="@+id/mob"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/enter_mobile_number"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#7E7070"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <Button
        android:id="@+id/signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:text="@string/sign_up"
        app:iconTint="#B17575" />


    <TextView
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_an_account"
        android:textColor="#171515"
        android:textSize="18sp"
        android:visibility="visible" />


</LinearLayout>